Replaces honestco logo and fixes partner logos on mobile

--- a/assets/css/event-fragment.styl
+++ b/assets/css/event-fragment.styl
@@ -88,3 +88,6 @@
 @media only screen and (max-width: $mobile-bp-sm)
     .single-event-logo
         width 75%
+
+    .partner-logo
+        height 80px
